--- a/src/css/main.css
+++ b/src/css/main.css
@@ -84,6 +84,17 @@ table, th, td {
   color: var(--text-secondary);
 }
 
+.game-logo-image {
+  object-fit: cover;
+}
+
+.fill{
+  background-size: cover;
+    background-position: center;
+  width: 100%;
+  height: 100%;
+}
+
 .strategy-matrix-tr{
   text-align: center;
   font-size: 14px;
